--disable-@files option doesn't work and cause an error

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 20
    • Affects Version/s: 11, 17, 18
    • Component/s: tools
    • b25

      The documentation for the java launcher describes the option of --disable-@files as a way to disable additional processing of argfiles. However adding the option either as part of the java command or in an argfile causes the java launcher to respond with the following:

      Unrecognized option: --disable-@files
      Error: Could not create the Java Virtual Machine.
      Error: A fatal exception has occurred. Program will exit.

      Additionally, there is an inconsistency in the documentation. Online documentation (https://docs.oracle.com/en/java/javase/18/docs/specs/man/java.html#standard-options-for-java) uses --disable-@files, while `java -help` uses -disable-@files. Regardless both ways fail, and it seems that the java -help is most likely the incorrect one based on code review.

            Assignee:
            Adam Sotona
            Reporter:
            Billy Korando
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: