8293041: --disable-@files option doesn't work and cause an error